T1081-0 Warning bar for multiple selection on backlog layout issue

--- a/grails-app/assets/stylesheets/application/styles.less
+++ b/grails-app/assets/stylesheets/application/styles.less
@@ -1171,6 +1171,7 @@ a.link {
     margin-top: 5px;
   }
   text-align: center;
+  z-index: 1;
   padding: 3px;
   &.no-margin {
     margin-left: 0;
